--- a/Client/BlazorApp/Shared/NavMenu.razor
+++ b/Client/BlazorApp/Shared/NavMenu.razor
@@ -31,13 +31,13 @@
             </NavLink>
         </div>
 
-
-
+@* 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Contact List2
             </NavLink>
-        </div>
+        </div> *@
+
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
@@ -52,12 +52,16 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+   @*      <div class="nav-item px-3">
         <NavLink class="nav-link" href="ImportJsonComponent">
         <span class="oi oi-list-rich" aria-hidden="true"></span> Import Json
         </NavLink>
-        </div>
+        </div> *@
+
+
     </nav>
+
+
 </div>
 
 
