--- a/Client/MauiBlazorApp/Pages/AddUpdatePerson.razor
+++ b/Client/MauiBlazorApp/Pages/AddUpdatePerson.razor
@@ -1,13 +1,13 @@
 ﻿@page "/addperson"
 @page "/UpdatePerson/{Id:int}"
-@using MauiBlazorApp.Models;
-@using MauiBlazorApp.Services
+@using CommonCode.Models
+@using CommonCode.Services
 @using System.ComponentModel.DataAnnotations
 @using System.Text.RegularExpressions
 @using CurrieTechnologies.Razor.SweetAlert2;
 
 @inject SweetAlertService Swal    // sweet alert call it Swal
-@inject IPersonService PersonService;
+@inject CommonCode.Services.IPersonService PersonService
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavManager
 @inject NavigationManager NavigationManager
