--- a/Client/MauiBlazorApp/Shared/MainLayout.razor.css
+++ b/Client/MauiBlazorApp/Shared/MainLayout.razor.css
@@ -8,9 +8,12 @@ main {
     flex: 1;
 }
 
+
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-   
+    /*    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+*/
+    background-color: #17324D;
+    display: block;
 }
 
 .top-row {
