--- a/Client/MauiBlazorApp/Shared/NavMenu.razor
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
 
 
 <style>
-    
+
     .oi {
         font-size: 16px; /* Adjust the font size for icons */
     }
@@ -22,6 +22,7 @@
 </style>
 
 
+
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
@@ -30,15 +31,15 @@
             </NavLink>
         </div>
 
-      
-        
+        @*
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Contact List2
-            </NavLink>
-        </div>
+        <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
+        <span class="oi oi-home" aria-hidden="true"></span> Contact List2
+        </NavLink>
+        </div> *@
 
-         <div class="nav-item px-3">
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Name List
             </NavLink>
@@ -51,14 +52,17 @@
             </NavLink>
         </div>
 
-        @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
+        @*      <div class="nav-item px-3">
+        <NavLink class="nav-link" href="ImportJsonComponent">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Import Json
+        </NavLink>
         </div> *@
-    </nav>
-</div>
 
+
+    </nav>
+
+
+</div>
 
 
 
