--- a/Client/MauiBlazorApp/Shared/NavMenu.razor.css
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor.css
@@ -2,6 +2,10 @@
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+body {
+    min-height: 100vh;
+}
+
 .top-row {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
@@ -32,7 +36,8 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: #FFFFFF;
+        font: normal normal normal 15px/28px;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -40,15 +45,15 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
+        .nav-item ::deep a.active {
+            background-color: rgba(255,255,255,0.25);
+            color: white;
+        }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item ::deep a:hover {
+            background-color: rgba(255,255,255,0.1);
+            color: white;
+        }
 
 @media (min-width: 641px) {
     .navbar-toggler {
@@ -58,5 +63,11 @@
     .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
+    }
+
+    .nav-scrollable {
+        /* Allow sidebar to scroll for tall menus */
+        height: calc(100vh - 3.5rem);
+        overflow-y: auto;
     }
 }
