--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -4,10 +4,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using MauiBlazorApp
+@using CommonCode
 @using MauiBlazorApp.Shared
 @using Blazorise
-@using MauiBlazorApp.Services
+@using CommonCode.Services
 @using Microsoft.JSInterop
 @using System.Text.Json
 
