--- a/Client/BlazorApp/Shared/NavMenu.razor
+++ b/Client/BlazorApp/Shared/NavMenu.razor
@@ -31,12 +31,12 @@
             </NavLink>
         </div>
 
-@* 
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Contact List2
             </NavLink>
-        </div> *@
+        </div>
 
 
         <div class="nav-item px-3">
