--- a/Client/BlazorApp/Shared/NavMenu.razor.css
+++ b/Client/BlazorApp/Shared/NavMenu.razor.css
@@ -67,7 +67,9 @@ body {
     
     .nav-scrollable {
         /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
-        overflow-y: auto;
+        /*height: calc(100vh - 3.5rem);
+        overflow-y: auto;*/
     }
+
+    
 }
